Git_WGBH_QC/src/objects/SFDC_Bug__c.object
<CustomObject>
    <description>Track bug details here, including what Project Component this bug is related to, the priority, the status, the product team working to fix this.</description>
    <fields>
        <fullName>Action_Status__c</fullName>
        <formula>IF( ISPICKVAL( Severity__c, &quot;Blocker&quot;),&quot;Escalate&quot;, IF( ISPICKVAL(Severity__c, &quot;Critical&quot;),&quot;Engineering Review&quot;, &quot;Normal&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_Close_Description__c</fullName>
        <label>Bug Close Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug_Open_days__c</fullName>
        <formula>Round( NOW()-CreatedDate ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bug Open (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N50000001QGo2EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>SFDC_Component__c</referenceTo>
        <relationshipName>R00N50000001QGnzEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001QGo5EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reference__c</fullName>
        <label>Duplicate Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Engineering_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001QGo4EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1 - Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4 - Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAEngineer__c</fullName>
        <label>QA Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001QGo6EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release #</label>
        <picklist>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Fix_Date__c</fullName>
        <label>Scheduled Fix Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trival</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bug</label>
    <listViews>
        <fullName>AllBugs</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>Priority__c</columns>
        <columns>Problem__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Bugs</label>
    </listViews>
    <nameField>
        <displayFormat>BUG-{000000}</displayFormat>
        <label>Bug #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>